--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ footer {
 
 .flex-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 #socialemedier { 
@@ -120,7 +120,56 @@ footer {
     
 }
 
+/*billede og tekst under sundlivsstil.html*/
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
 
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
+    
+}
+
+/*responsivt design*/
+@media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+}
+.row2::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.row2 {
+  display: flex;
+}
+
+.column2 {
+  flex: 33.33%;
+  padding: 5px;
+    
+}
+
+/*responsivt design*/
+@media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+}
 
 
 
